--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "validator": "^13.15.0"
   },
   "devDependencies": {
+    "colors": "^1.4.0",
     "eslint": "^9.23.0",
+    "faker": "^5.5.3",
     "nodemon": "^3.1.9"
   },
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "lint": "eslint src/**/*.js"
+    "lint": "eslint src/**/*.js",
+    "data:import": "node src/seeder/seeder.js",
+    "data:destroy": "node src/seeder/seeder.js -d"
   }
 }
